--- a/style.css
+++ b/style.css
@@ -8,61 +8,61 @@
 }
 
 .cabecalho{
-    max-width: 1440px;
-    height: 103px;
-    margin: 0 auto;
-    background-color: #3000bacc;
+    display: flex;
+    justify-content: space-between;
+    background: #3000bac2;
+    padding: 30px;
 }
+
 .menu{
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+    display: none;
 }
-.menu a{
-    margin-top: 58px;
+
+.material-symbols-outlined{
     color: white;
-    text-decoration: none;
-    font-size: 25px;
-    font-weight: 400;
-    font-family: 'Poppins', sans-serif;
 }
+
+.material-symbols-outlined:hover{
+    color: whitesmoke;
+}
+
 .section-principal{
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    max-width: 1440px;
-    margin: 0 auto;
-    background-color: rgba(220, 6, 44, 0.7);;
-    height: 689px;
-    color: #ffff;
+    padding: 30px 0px;
+    background: rgba(220, 6, 44, 0.7);
+    color: white;
+    font-size: 14px;
 }
+
 .section-principal h1{
-    padding: 60px 0px;
-    margin-right: 796px;
-    font-size: 50px;
+    font-size: 2.2em;
+    text-align: center;
+    padding: 20px 0px;
 }
+
 .section-principal h2{
-    position: absolute;
-    top: 400px;
-    left: 472px;
-    font-size: 40px;
-    line-height: 60px;
+    text-align: center;
 }
 
 .imagem-do-astronauta{
-    position: absolute;
-    top: 380px;
-    left: 1300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-footer{
-    max-width: 1440px;
-    padding: 10px;
-    margin: 0 auto;
-    background-color:#3000bacc;
+
+
+
+
+
+
+.rodape{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background:#5933c8;
+    padding: 20px 0px;
 }
 
-footer .logo{
-    display: block;
+.rodape .logo{
     margin: 0 auto;
 }
