--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body{
 }
 
 .section-principal{
-    padding: 75px 0px;
+    padding: 60px 0px;
     background: #e6506b;
     color: white;
     font-size: 14px;
@@ -59,7 +59,7 @@ body{
     background:#5933c8;
 }
 .logo{
-    padding: 11px 0px;
+    padding: 76px 0px;
 }
 .rodape .logo{
     margin: 0 auto;
@@ -67,7 +67,7 @@ body{
 
 /* celulares maiores */
 
-@media screen and (max-width: 1280px){
+@media screen and (min-width: 1280px){
     .menu{
         display: flex;
         gap: 90px;
@@ -84,6 +84,5 @@ body{
     .section-principal{
         padding: 43px;
     }
-
 
 }
