--- a/style.css
+++ b/style.css
@@ -65,11 +65,17 @@ body{
     margin: 0 auto;
 }
 
-/* celulares maiores */
+/* Tablets */
+@media screen and (min-width: 884px){
+
+}
+
+/* Nootbooks */
 
 @media screen and (min-width: 1280px){
     .menu{
         display: flex;
+        flex-wrap: wrap;
         gap: 90px;
         margin: 0 auto;
     }
@@ -82,7 +88,25 @@ body{
         color: white;
     }
     .section-principal{
-        padding: 43px;
+        display: flex;
+        align-items: flex-start;
+        padding: 69px;
+    }
+    .section-principal h1{
+        font-size: 3.7em;
+        margin-top: -80px;
+    }
+    .section-principal h2{
+        font-size: 2.11em;
+        position: relative;
+        top: 100px;
+        left: -100px;
     }
 
+    .astronauta{
+        width: 400px;
+    }
+    .logo{
+        padding: 29px 0px;
+    }
 }
