--- a/style.css
+++ b/style.css
@@ -87,6 +87,10 @@ body{
         text-decoration: none;
         color: white;
     }
+
+    .menu a:hover{
+        color: rgb(226, 226, 226);
+    }
     .section-principal{
         display: flex;
         align-items: flex-start;
