--- a/style.css
+++ b/style.css
@@ -80,18 +80,36 @@ body{
         text-decoration: none;
         color: white;
     }
+    .menu a:hover{
+        color: rgb(226, 226, 226);
+    }
     .section-principal{
         padding: 112px 0px;
     }
 
     .section-principal h1{
-        font-size: 3.7em;
+        position: absolute;
+        top: 200px;
+        left: 82px;
+        font-size: 4.3em;
         margin-top: -80px;
     }
 
-    .menu a:hover{
-        color: rgb(226, 226, 226);
+    .section-principal h2{
+        font-size: 2.4em;
+        position: relative;
+        top:100px ;
+        left:-20px;
+        padding-bottom: 120px;
+    }
+
+    .astronauta{
+        width: 500px;
+        margin-left: 190px;
+    }
 }
+
+
 
 /* Nootbooks */
 
