--- a/style.css
+++ b/style.css
@@ -84,28 +84,23 @@ body{
         color: rgb(226, 226, 226);
     }
     .section-principal{
-        padding: 112px 0px;
+        padding: 40px 0px;
     }
 
     .section-principal h1{
-        position: absolute;
-        top: 200px;
-        left: 82px;
+        text-align: center;
         font-size: 4.3em;
-        margin-top: -80px;
     }
 
     .section-principal h2{
+        text-align: center;
         font-size: 2.4em;
-        position: relative;
-        top:100px ;
-        left:-20px;
-        padding-bottom: 120px;
+        padding-bottom: 30px;
     }
 
     .astronauta{
-        width: 500px;
-        margin-left: 190px;
+        width: 440px;
+        margin: 0 auto;
     }
 }
 
