--- a/style.css
+++ b/style.css
@@ -156,4 +156,28 @@ body{
     .logo{
         padding: 29px 0px;
     }
+
+    /* Desktop e Tv´s*/
+
+    @media screen and (min-width: 1282px)and (max-width: 1930px) {
+        .section-principal{
+            display: flex;
+            justify-content: space-evenly;
+            align-content: stretch;
+            padding: 97.7px 0px;
+        }
+
+        .section-principal h1{
+            font-size: 6em;
+        }
+
+        .section-principal h2{
+            font-size: 3em;
+            transform: translate(3%, 17%);
+        }
+        
+        .astronauta{
+            width: 550px;
+        }
+    }
 }
